--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -104,6 +104,7 @@
 .next {
     cursor: pointer;
     font-weight: bold;
+    color: #f46326;
 }
 
 .previous:hover,
@@ -119,4 +120,12 @@
 .bookmark {
     margin-left: 5px;
     cursor: pointer;
+}
+
+.isDisabled {
+    color: currentColor;
+    cursor: not-allowed;
+    opacity: 0.5;
+    pointer-events: none;
+    text-decoration: none;
 }
