add responsiveness to the app

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -3,7 +3,7 @@
     font-family: arial, sans-serif;
 }
 
-#news {
+.news {
     /* text-align: center; */
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -12,33 +12,33 @@
     font-size: 12px;
 }
 
-#news td {
+.news td {
     padding: 10px;
 }
 
-#news th {
+.news th {
     /* border: 1px solid #ddd; */
     padding: 8px;
 }
 
-#news th:nth-child(1),
-#news th:nth-child(2),
-#news th:nth-child(3),
-#news td:nth-child(1),
-#news td:nth-child(2),
-#news td:nth-child(3) {
+.news th:nth-child(1),
+.news th:nth-child(2),
+.news th:nth-child(3),
+.news td:nth-child(1),
+.news td:nth-child(2),
+.news td:nth-child(3) {
     text-align: center !important;
 }
 
-#news th:last-child {
+.news th:last-child {
     width: 80%
 }
 
-#news tr:nth-child(even) {
+.news tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#news th {
+.news th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left !important;
