--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* width: 85%; */
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,21 +13,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-@media only screen and (max-width:800px) {
-  /* For tablets: */
-  body {
-    width: 80%;
-    padding: 0;
-    /* overflow: hidden; */
-    overflow-x: hidden;
-  }
-}
-@media only screen and (max-width:500px) {
-  /* For mobile phones: */
-  body {
-    width: 90%;
-    overflow-x: hidden;
-  }
 }
